fix anchor about me on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -326,7 +326,7 @@ span.cursor.typing {
     }
 
     span.anchor#about-me {
-        top: -190px;
+        top: -130px;
     }
 
     span.anchor#projects {
